# amdb-backend

./: .coverage  .dockerignore  .env.template  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
.github/workflows/: lint.yaml  test.yaml
config/: prod_config.template.toml  test_config.template.toml
docs/: CHANGELOG.md
scripts/: format.sh  lint.sh  test-cov.sh  test.sh
src/amdb/: __about__.py
src/amdb/application/command_handlers/: __init__.py  add_to_watchlist.py  create_movie.py  create_person.py  create_user.py  delete_from_watchlist.py  delete_movie.py  rate_movie.py  register_user.py  review_movie.py  unrate_movie.py  update_my_profile.py
src/amdb/application/commands/: add_to_watchlist.py  create_movie.py  create_person.py  create_user.py  delete_from_watchlist.py  delete_movie.py  rate_movie.py  register_user.py  rerate_movie.py  review_movie.py  unrate_movie.py  update_my_profile.py
src/amdb/application/common/: exception.py  identity_provider.py  password_manager.py  unit_of_work.py
src/amdb/application/queries/: detailed_movie.py  detailed_reviews.py  export_and_send_my_ratings.py  export_my_ratings.py  get_movie.py  get_movie_ratings.py  get_movie_reviews.py  get_movies.py  get_my_ratings.py  get_my_reviews.py  get_rating.py  get_review.py  login.py  my_detailed_ratings.py  my_detailed_watchlist.py  non_detailed_movies.py  request_my_ratings_export.py  reviews.py
src/amdb/application/query_handlers/: __init__.py  detailed_movie.py  detailed_reviews.py  export_and_send_my_ratings.py  export_my_ratings.py  get_movie.py  get_movie_ratings.py  get_movie_reviews.py  get_movies.py  get_my_ratings.py  get_my_reviews.py  get_rating.py  get_review.py  login.py  my_detailed_ratings.py  my_detailed_watchlist.py  non_detailed_movies.py  request_my_ratings_export.py  reviews.py
src/amdb/domain/: constants.py  exception.py  unset.py  value_objects.py
src/amdb/domain/constants/: exceptions.py
src/amdb/domain/entities/: access_policy.py  base.py  movie.py  movie_actor.py  movie_art_director.py  movie_composer.py  movie_director.py  movie_editor.py  movie_for_later.py  movie_producer.py  movie_screenwriter.py  person.py  rating.py  review.py  reviewer.py  user.py
src/amdb/domain/events/: base.py
src/amdb/domain/exceptions/: acess.py  base.py  movie.py  person.py  rating.py  registration.py  review.py  series.py  series_episode.py  user.py  vote.py
src/amdb/domain/policies/: __init__.py  access.py  base.py  movie_reviewing.py  movie_voting.py  registration.py  reviewing.py  voting.py
src/amdb/domain/services/: __init__.py  access_concern.py  base.py  create_movie.py  create_person.py  create_user.py  rate_movie.py  review_movie.py  unrate_movie.py  update_profile.py  watch_later.py
src/amdb/domain/validators/: email.py  telegram.py
src/amdb/infrastructure/: exception.py  permissions_gateway.py
src/amdb/infrastructure/auth/: exception.py
src/amdb/infrastructure/converters/: ratings_for_export.py
src/amdb/infrastructure/converting/: ratings_for_export.py
src/amdb/infrastructure/database/: builders.py  config.py  gateway_factory.py  unit_of_work.py
src/amdb/infrastructure/in_memory/: access_policy_gateway.py  permissions_gateway.py
src/amdb/infrastructure/password_manager/: hash_computer.py  model.py  password_hash.py  password_hash_gateway.py  password_manager.py
src/amdb/infrastructure/security/: hasher.py  model.py  password_manager.py
src/amdb/infrastructure/sending/: email.py
src/amdb/infrastructure/task_queue/: export_and_send_my_ratings.py
src/amdb/main/: config.py  ioc.py  providers.py
src/amdb/main/cli/: __main__.py  app.py  di.py
src/amdb/main/providers/: __init__.py  application_services.py  command_handlers.py  configs.py  connections.py  converting.py  data_mappers.py  domain_services.py  domain_validators.py  password_manager.py  query_handlers.py  sending.py  task_queue.py
src/amdb/main/web_api/: __main__.py  app.py  config.py  di.py  providers.py
src/amdb/main/worker/: app.py
src/amdb/presentation/: create_handler.py  handler_factory.py
src/amdb/presentation/cli/: alembic.py  migration.py  movie.py  person.py  setup.py
src/amdb/presentation/web_api/: constants.py  exception_handlers.py  router.py
src/amdb/presentation/worker/: export_and_send_my_ratings.py  router.py
tests/unit/: conftest.py
tests/unit/application/: conftest.py
(+432 files in other folders)
