[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["amdb*"]

[tool.setuptools.package-data]
amdb = ["infrastructure/persistence/alembic/alembic.ini"]

[project]
name = "amdb"
description = "Awesome Movie Database Backend"
version = "0.5.0"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = "==3.10.*"

authors = [
    { name = "madnoberson", email = "baseddepartmentzx77@gmail.com" },
]
maintainers = [
    { name = "madnoberson", email = "baseddepartmentzx77@gmail.com" },
]
dependencies = [
    "uuid7",
    "sqlalchemy==2.0.23",
    "psycopg2-binary==2.9.9",
    "alembic==1.13.0",
    "redis>=5.0.0",
]

[project.optional-dependencies]
web_api = [
    "fastapi==0.103.*",
    "uvicorn==0.22.*",
]
cli = [
    "typer[all]==0.9.*",
]
dev = [
    "mypy==1.8.*",
    "ruff==0.1.*",
    "pre-commit==3.5.*",
]
test = [
    "pytest",
]
coverage = [
    "pytest-cov",
]

[project.scripts]
amdb-cli = "amdb.main.cli.__main__:main"
amdb-web_api = "amdb.main.web_api.__main__:main"
