[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["amdb*"]

[tool.setuptools.package-data]
amdb = ["infrastructure/persistence/alembic/alembic.ini"]

[project]
name = "amdb"
description = "Awesome Movie Database Backend"
version = "1.0.0"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = "==3.10.*"

authors = [
    { name = "madnoberson", email = "baseddepartmentzx77@gmail.com" },
]
maintainers = [
    { name = "madnoberson", email = "baseddepartmentzx77@gmail.com" },
]
dependencies = [
    "uuid7==0.1.*",
    "toml==0.10.*",
    "dishka==0.6.*",
    "sqlalchemy==2.0.*",
    "psycopg2-binary==2.9.*",
    "alembic==1.13.*",
    "redis==5.0.*",
    "faststream[redis]==0.4.*",
    "typer[all]==0.9.*",
]

[project.optional-dependencies]
web_api = [
    "fastapi==0.103.*",
    "uvicorn==0.22.*",
]
dev = [
    "mypy==1.8.*",
    "ruff==0.1.*",
    "pre-commit==3.5.*",
]
test = [
    "pytest",
]
coverage = [
    "pytest-cov",
]

[project.scripts]
amdb = "amdb.main.cli.app:run_cli"
